# b717

./: .gitignore  CMakeLists.txt  TestingReadMe.md
lib/IMGUI/backends/: imgui_impl_opengl2.cpp
lib/TOGA/: cdr.cpp  cdr.h  datatypes.h  debug_flag.cpp  debug_flag.h  imgui_wrapper.cpp  imgui_wrapper.h  version.h  version.h.in  xdr.cpp  xdr.h
src/: autopilot_ui.cpp  autopilot_ui.h  imgui_impl_xplane.cpp  imgui_impl_xplane.h  main.cpp
src/02_xdatarefs/: xdatarefs.cpp  xdatarefs.h
src/04_cdatarefs/: cdatarefs.cpp  cdatarefs.h
src/xx_examples/: autopilot_ui.cpp  autopilot_ui.h  ex_cdatarefs.cpp
src/xx_examples/imgui/: autopilot_ui.cpp  autopilot_ui.h
src/xx_imgui_xp_impl/: imgui_xp_impl.cpp  imgui_xp_impl.h
src/xx_imgui_xp_integration/: imgui_xp_integ.cpp  imgui_xp_integ.h
src/xx_tests/: cdatarefs_test.cpp  tests_all.cpp  tests_all.h  tests_cdatarefs.cpp  tests_cdatarefs.h  tests_xdatarefs.cpp  tests_xdatarefs.h
